Prevent overflow.

--- a/app/assets/stylesheets/flappy_pig.css.scss
+++ b/app/assets/stylesheets/flappy_pig.css.scss
@@ -38,6 +38,7 @@
 }
 
 body {
+  overflow: hidden;
   background: #222;
   background-image: url('https://dl.dropboxusercontent.com/u/2330299/capstone/flappy_pig/bg_image.gif');
   background-size: cover;
